force-app/main/default/objects/Document_Checklist__mdt/Document_Checklist__mdt.object-meta.xml
<CustomObject>
    <description>Used by the documentChecklist LWC</description>
    <label>Document Checklist</label>
    <pluralLabel>Document Checklists</pluralLabel>
</CustomObject>