force-app/main/default/objects/Document_Checklist__mdt/fields/Approved_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Approved_Document_Status__c</fullName>
    <defaultValue>&quot;Approved&quot;</defaultValue>
    <label>Approved Document Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>