force-app/main/default/objects/Document_Checklist__mdt/fields/Default_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Document_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <inlineHelpText>Default Status of Documents that have not been uploaded yet</inlineHelpText>
    <label>Default Document Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>