force-app/main/default/objects/Document_Checklist__mdt/fields/Document_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Document_Date_Field__c</fullName>
    <description>Field name of date field that should record date of document submission</description>
    <label>Document Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>