force-app/main/default/objects/Document_Checklist__mdt/fields/Document_Object__c.field-meta.xml
<CustomField>
    <fullName>Document_Object__c</fullName>
    <inlineHelpText>API Name of wrapper objects documents will get uploaded to</inlineHelpText>
    <label>Document Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>