force-app/main/default/objects/Document_Checklist__mdt/fields/Document_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Document_Status_Field__c</fullName>
    <inlineHelpText>API Name of the Document Status Field on the Document Wrapper Object</inlineHelpText>
    <label>Document Status Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>