force-app/main/default/objects/Document_Checklist__mdt/fields/Document_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Field__c</fullName>
    <inlineHelpText>API Name of the Document Type Field on the Document Wrapper Object</inlineHelpText>
    <label>Document Type Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>