force-app/main/default/objects/Document_Checklist__mdt/fields/Expired_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Expired_Document_Status__c</fullName>
    <defaultValue>&quot;Expired&quot;</defaultValue>
    <description>Status assigned to Expired Documents</description>
    <label>Expired Document Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>