force-app/main/default/objects/Document_Checklist__mdt/fields/Rejected_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Document_Status__c</fullName>
    <defaultValue>&quot;Rejected&quot;</defaultValue>
    <description>Status assigned to rejected Documents</description>
    <label>Rejected Document Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>