force-app/main/default/objects/Document_Checklist__mdt/fields/Rejection_Reason_Field__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Field__c</fullName>
    <description>API Name of rejection reason field to be displayed when document status is rejected</description>
    <label>Rejection Reason Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>