force-app/main/default/objects/Document_Checklist__mdt/fields/Submitted_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Document_Status__c</fullName>
    <defaultValue>&quot;Submitted&quot;</defaultValue>
    <description>Status assigned to Documents uploaded</description>
    <label>Submitted Document Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>